k8s/postgres/postgres-ext-svc.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: istio-system
  name: external-postgres-svc
spec:
  selector:
    istio: egressgateway
  ports:
  - name: tcp-5432
    port: 5432
    targetPort: 5432
