k8s/postgres/postgres-se.yaml
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: postgres-se
spec:
  exportTo:
    - "*"
  location: MESH_EXTERNAL
  hosts:
  - "postgres.rezz.io"
  ports:
  - name: tcp-postgres
    number: 5432
    protocol: TCP
  resolution: DNS
