k8s/postgres/postgres-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: postgres-vs
  namespace: istio-system
spec:
  exportTo:
    - "*"
  hosts:
  - "postgres.rezz.io"
  gateways:
  - mesh
  - postgres-gw
  tcp:
  - match:
    - port: 5432
      gateways:
      - mesh
    route:
    - destination:
        host: external-postgres-svc.istio-system.svc.cluster.local
      weight: 100
  - match:
    - port: 5432
      gateways:
      - postgres-gw
    route:
    - destination:
        host: "postgres.rezz.io"
        port:
          number: 5432
      weight: 100
